Delete of exercise

--- a/front/src/app/coach/exercises/exercises-list/exercises-list.component.html
+++ b/front/src/app/coach/exercises/exercises-list/exercises-list.component.html
@@ -154,8 +154,8 @@
                 <td>
                     <div class="row iconsList pull-right">
                         <div class="col-md-6">
-                            <button class="ion ion-clipboard pointer bg-primary" md-mini-fab
-                                    mdTooltip="Consulter le programme de l'adhérent"
+                            <button class="ion ion-trash-b pointer bg-danger" md-mini-fab
+                                    mdTooltip="Supprimer l'exercice" (click)="deleteThis(exercise)"
                                     [mdTooltipPosition]="'left'"></button>
                         </div>
                         <div class="col-md-6">
