--- a/front/src/assets/style/_colors.scss
+++ b/front/src/assets/style/_colors.scss
@@ -1,6 +1,6 @@
 $primary-color: #FF5722;
 $accent-color: #448AFF;
-$warn-color: #FFAB00;
+$warn-color: #e53935;
 $white-color: #ffffff;
 
 $dark-primary-color: #E64A19;
