--- a/front/src/assets/style/angular-material-custom.scss
+++ b/front/src/assets/style/angular-material-custom.scss
@@ -16,7 +16,7 @@ $candy-app-primary: mat-palette($mat-deep-orange);
 $candy-app-accent: mat-palette($mat-blue, A200);
 
 // The warn palette is optional (defaults to red).
-$candy-app-warn: mat-palette($mat-amber, A700);
+$candy-app-warn: mat-palette($mat-red, A700);
 
 // Create the theme object (a Sass map containing all of the palettes).
 $candy-app-theme: mat-light-theme($candy-app-primary, $candy-app-accent, $candy-app-warn);
