--- a/front/src/app/coach/members/members.component.html
+++ b/front/src/app/coach/members/members.component.html
@@ -7,7 +7,7 @@
                        [icon]="'ion ion-person-stalker'"
                        [nbElements]="members.length"
                        [placeHolderTitle]="'Par nom, prénom'"
-                       (filterArgs)="filterArgsChanged($event)">
+                       (filterArgs)="filterArgsChanged()">
     </pulpe-header-list>
 
 
