--- a/front/src/app/member/program/exercise-preview/exercise-preview.component.scss
+++ b/front/src/app/member/program/exercise-preview/exercise-preview.component.scss
@@ -7,7 +7,7 @@
   color: $accent-color;
 }
 
-.exerciseMachineName{
+.exerciseMachineName {
   font-size: 0.85rem;
   font-weight: 400;
   font-style: italic;
@@ -19,4 +19,14 @@
   font-size: 1rem;
   font-weight: 400;
   font-style: italic;
+}
+
+.top-right {
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+
+.relative {
+  position: relative;
 }
