--- a/front/src/app/signup/signup.component.html
+++ b/front/src/app/signup/signup.component.html
@@ -86,9 +86,9 @@
                                                     obligatoire.
                                                 </md-hint>
                                                 <md-hint
-                                                        *ngIf="passwordCtrl.dirty && passwordCtrl.hasError('minlength')"
+                                                        *ngIf="passwordCtrl.dirty && passwordCtrl.hasError('min')"
                                                         class="form-control-feedback">Le mot de passe doit faire au
-                                                    minimum {{passwordCtrl.getError('minlength')['requiredLength']}}
+                                                    minimum {{passwordCtrl.getError('min')['requiredLength']}}
                                                     caractères.
                                                 </md-hint>
                                             </md-input-container>
