--- a/front/src/app/member/program/program.component.html
+++ b/front/src/app/member/program/program.component.html
@@ -84,7 +84,7 @@
 <section>
     <div class="row">
         <div class="col-md-12">
-            <md-tab-group (selectChange)="refreshFocusedExercisesGroupBy($event)" >
+            <md-tab-group (selectChange)="refreshFocusedExercisesGroupBy($event)" exercisesGroupTab>
                 <md-tab *ngFor="let exercisesGroupLabel of exerciseGroupLabels"
                         label="{{exercisesGroupLabel.label}}">
                     <md-card>
