--- a/front/src/app/member/evolution/evolution.component.html
+++ b/front/src/app/member/evolution/evolution.component.html
@@ -37,8 +37,8 @@
     </div>
     <hr>
 
-    <div class="row pt-3" *ngIf="evolutionMeasurementPoints && evolutionMeasurementPoints.length > 0; else empty">
-        <div class="col-md-12">
+    <div class="row pt-3" *ngIf="evolutionMeasurementPoints && evolutionMeasurementPoints.length > 1; else empty">
+        <div class="col-md-10 offset-md-1 pt-3">
             <pulpe-measurement-graph [measurementName]="focusedMeasurement"
                                      [evolutionMeasurementPoints]="evolutionMeasurementPoints">
             </pulpe-measurement-graph>
