--- a/front/src/app/coach/profile/profile-coach-edit-dialog/profile-coach-edit-dialog.component.html
+++ b/front/src/app/coach/profile/profile-coach-edit-dialog/profile-coach-edit-dialog.component.html
@@ -37,14 +37,14 @@
                             </md-hint>
                         </md-input-container>
                         <md-input-container class="col-md-12" color="primary" ngxErrors="birthdate">
-                            <input id="inputBirthdate" mdInput type="date" [max]="maximumBirthdate"
-                                   placeholder="Votre date de naissance"
-                                   formControlName="birthdate"
-                                   required>
+                            <input mdInput [mdDatepicker]="picker" formControlName="birthdate"
+                                   placeholder="Votre date de naissance" required [max]="maximumBirthdate">
+                            <button mdSuffix [mdDatepickerToggle]="picker"></button>
                             <md-hint *ngIf="birthdateCtrl.dirty && birthdateCtrl.hasError('')"
                                      class="form-control-feedback">Votre date de naissance est obligatoire
                             </md-hint>
                         </md-input-container>
+                        <md-datepicker #picker></md-datepicker>
                         <md-radio-group formControlName="gender" class="col-md-12 pl-3">
                             <i class="ion-ios-person-outline iconGender"></i>
                             <md-radio-button value="Male">Homme</md-radio-button>
