Home for a coach

--- a/front/src/app/coach/members/members.component.html
+++ b/front/src/app/coach/members/members.component.html
@@ -53,7 +53,7 @@
                          class="objectiveImg" alt="Type">
                 </td>
                 <td>
-                    <div class="row iconsList pull-right">
+                    <div class="row pull-right">
                         <div class="col-md-6">
                             <button class="ion ion-clipboard pointer bg-primary" md-mini-fab
                                     mdTooltip="Consulter le programme de l'adhérent"
