--- a/front/src/app/shared/sidebar/sidebar.component.html
+++ b/front/src/app/shared/sidebar/sidebar.component.html
@@ -73,7 +73,7 @@
                             <span class="pl-4">Mon profil</span>
                         </a>
                     </li>
-                    <li class="sidebar-link pt-2 pb-3" [routerLinkActive]="['active']" routerLink="/accueil">
+                    <li class="sidebar-link pt-2 pb-3" [routerLinkActive]="['active']" routerLink="/accueil/coach">
                         <a>
                             <i class="material-icons">store</i>
                             <span class="pl-4">Accueil</span>
