--- a/front/src/app/coach/home-coach/home-coach.component.html
+++ b/front/src/app/coach/home-coach/home-coach.component.html
@@ -32,7 +32,7 @@
         <div class="col-md-12">
             <md-card class="pt-0 white">
                 <div class="row">
-                    <div class="col-md-4">
+                    <div class="col-md-4 pb-5">
                         <md-card class="bg-primary card-cascade">
                             <h4 class="text-light-weight text-white">Ma salle de sport</h4>
                         </md-card>
@@ -53,7 +53,9 @@
                                             <div class="col-md-6">
                                                 <div class="row separatorVertical">
                                                     <div class="col-md-12 text-center">
-                                                        <h4 class="text-light-weight">Ajouter un adhérent</h4>
+                                                        <h4 class="text-light-weight text-light-primary">
+                                                            Ajouter un adhérent
+                                                        </h4>
                                                     </div>
                                                     <div class="col-md-12 text-center pt-4">
                                                         <button md-mini-fab class="btn-actions"
@@ -66,7 +68,9 @@
                                             <div class="col-md-6">
                                                 <div class="row">
                                                     <div class="col-md-12 text-center">
-                                                        <h4 class="text-light-weight">Ajouter une machine</h4>
+                                                        <h4 class="text-light-weight text-light-primary">
+                                                            Ajouter une machine
+                                                        </h4>
                                                     </div>
                                                     <div class="col-md-12 text-center pt-4">
                                                         <button md-mini-fab class="btn-actions"
