Add some missing files to mobile project

--- a/mobile/src/app/app.scss
+++ b/mobile/src/app/app.scss
@@ -1,6 +1,6 @@
 // http://ionicframework.com/docs/v2/theming/
-@import url("../assets/vendors/font-awesome/css/font-awesome.min.css");
-@import url("../assets/fonts/fitness-font/style.css");
+//@import url("../assets/vendors/font-awesome/css/font-awesome.min.css");
+//@import url("../assets/fonts/fitness-font/style.css");
 
 // App Global Sass
 // --------------------------------------------------
