Upload photo from edit profile.

--- a/front/src/app/coach/profile/profile-coach.component.html
+++ b/front/src/app/coach/profile/profile-coach.component.html
@@ -25,7 +25,7 @@
             <md-card class="pt-0 white">
                 <div class="row">
                     <div class="col-md-4">
-                        <pulpe-profile-photo>
+                        <pulpe-profile-photo [coach]="coach">
                         </pulpe-profile-photo>
                     </div>
                     <div class="col-md-8">
