--- a/front/src/app/shared/profile/profile-photo/profile-photo.component.html
+++ b/front/src/app/shared/profile/profile-photo/profile-photo.component.html
@@ -1,9 +1,11 @@
 <md-card class="bg-secondary card-cascade">
-    <h4 class="text-light-weight text-white">Ma photo</h4>
+    <h4 class="text-light-weight text-white">Ma photo
+        <i class="pull-right ion-ios-camera pointer" (click)="openPhotoDialog()"></i>
+    </h4>
 </md-card>
 
 <div class="row mt-5">
     <div class="col-md-12 pt-3 text-center">
-        <img md-card-image class="rounded-photo-corners" src="../../../../assets/profile/profile.png">
+        <img md-card-image class="rounded-photo-corners" [src]="sanitizer.bypassSecurityTrustUrl(document.data)">
     </div>
 </div>
