--- a/mobile/src/components/exercise-organized-execution/exercise-organized-execution.html
+++ b/mobile/src/components/exercise-organized-execution/exercise-organized-execution.html
@@ -27,6 +27,6 @@
 </ion-row>
 <ion-row>
     <ion-col text-center>
-        <button ion-button round (click)="terminate()">{{'EXERCISE_DONE' | translate}}</button>
+        <button ion-button round (click)="terminate()" color="secondary">{{'EXERCISE_DONE' | translate}}</button>
     </ion-col>
 </ion-row>
