--- a/mobile/src/components/exercise-type-img/exercise-type-img.html
+++ b/mobile/src/components/exercise-type-img/exercise-type-img.html
@@ -1,8 +1,8 @@
 <div [ngSwitch]="exerciseTypeEnum">
-  <img *ngSwitchCase="ExerciseGroupTypeEnum.BodybuildingExercise" src="../../assets/img/exercise-types/strength-64.png" alt="Type">
-  <img *ngSwitchCase="ExerciseGroupTypeEnum.CardioExercise" src="../../assets/img/exercise-types/cardiogram-64.png" alt="Type">
-  <img *ngSwitchCase="ExerciseGroupTypeEnum.TrainingExercise" src="../../assets/img/exercise-types/cardiogram-64.png" alt="Type">
-  <img *ngSwitchCase="ExerciseGroupTypeEnum.OrganizedExercise" src="../../assets/img/exercise-types/music-player-64.png" alt="Type">
-  <img *ngSwitchCase="ExerciseGroupTypeEnum.StretchingExercise" src="../../assets/img/exercise-types/dressing-room-64.png"
+  <img *ngSwitchCase="ExerciseGroupTypeEnum.BodybuildingExercise" src="assets/img/exercise-types/strength-64.png" alt="Type">
+  <img *ngSwitchCase="ExerciseGroupTypeEnum.CardioExercise" src="assets/img/exercise-types/cardiogram-64.png" alt="Type">
+  <img *ngSwitchCase="ExerciseGroupTypeEnum.TrainingExercise" src="assets/img/exercise-types/cardiogram-64.png" alt="Type">
+  <img *ngSwitchCase="ExerciseGroupTypeEnum.OrganizedExercise" src="assets/img/exercise-types/music-player-64.png" alt="Type">
+  <img *ngSwitchCase="ExerciseGroupTypeEnum.StretchingExercise" src="assets/img/exercise-types/dressing-room-64.png"
     alt="Type">
 </div>
