--- a/front/src/app/coach/profile/profile-completation-coach/profile-completation-coach.component.html
+++ b/front/src/app/coach/profile/profile-completation-coach/profile-completation-coach.component.html
@@ -23,13 +23,13 @@
                         <div class="row">
                             <md-input-container class="col-md-8 offset-md-2 form-group" ngxErrors="birthdate">
                                 <input mdInput [mdDatepicker]="picker" formControlName="birthdate"
-                                       placeholder="Saisissez votre date de naissance" required [max]="maximumBirthdate">
+                                       placeholder="Saisissez votre date de naissance" readonly='true' required [max]="maximumBirthdate">
                                 <button mdSuffix [mdDatepickerToggle]="picker"></button>
                                 <md-hint *ngIf="birthdateCtrl.dirty && birthdateCtrl.hasError('')"
                                          class="form-control-feedback">{{errorTranslations.birthdate.required}}
                                 </md-hint>
                             </md-input-container>
-
+                            <md-datepicker #picker></md-datepicker>
                             <div class="col-md-12 text-center">
                                 <i class="ion-ios-person-outline iconGender"></i>
                                 <md-radio-group formControlName="gender" class="col-7 col-md-8">
